--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf=8">
-		<title>Cool Site</title>
-	</head>
-  <body>
-		hello
-	</body>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Rubber Ducky</title>
+</head>
+<body>
+  <h1>My Duck Page</h1>
+  <h2>An abbreviated history</h2>
+  <nav>
+    <img src="duck.jfif" alt="html" width=150 height="150">
+    <h3>Duck Resources:</h3>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=bf9d7rSf_Ks" target="_blank">Sesame Street - Rubber Ducky (1970)</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging" target="_blank">Rubber Duck Debugging</a></li>
+      <li><a href="http://www.orientaltrading.com/toys-games-and-novelties/novelty-toys/rubber-duckies-a1-550222-1.fltr" target="_blank">Buy Rubber Duckies</a></li>
+    </ul>
+  </nav>
+<main>
+  <article>
+    <header>
+      <p>The history of the rubber duck is linked to the emergence of rubber manufacturing in the late 19th century. The earliest rubber ducks were made from harder rubber when manufacturers began using Charles Goodyear's invention, vulcanized rubber. As a consequence, these solid rubber ducks were not capable of floating, but instead were intended for use as chew toys.</p>
+    </header>
+    <section>
+    <h3>History</h3>
+      <p>Sculptor Peter Ganine created a sculpture of a duck in the 1940s, then patented it and reproduced it as a floating toy, of which over 50,000,000 were sold.</p>
+      <p>Ernie, a popular Muppet from the television series Sesame Street, performed the song &quot;<em>Rubber Duckie</em>.&quot; Ernie frequently spoke to his duck and carried it with him in other segments of the show. On a special occasion, Little Richard performed the song.</p>
+      <p>C.W. McCall's hit song "Convoy" (and the movie and novel it inspired) are narrated from the viewpoint of a character who replaced the bulldog hood ornament on his Mack truck with a bathtub toy and used the on-air handle of "Rubber Duck".
+      <p>In 2013 rubber ducks were inducted into the Toy Hall of Fame. Rubber Ducks joined a list of only 63 other toys that have also inducted into the Hall of Fame since its founding in 1998.</p>
+      <p><i>Source: <a href="https://en.wikipedia.org/wiki/Rubber_duck">Wikipedia</a></i></p><br>
+    </section>
+  </article>
+</main>
+  <footer>
+  <p>&copy; Follow me on Linkedin <a href="https://www.linkedin.com/in/adran">www.linkedin.com/in/adran</a> | Email me at <a href="mailto:adran5.uw.edu">adran5.uw.edu</a></p>
+  </footer>
+</body>
 </html>
